--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1> hola amor, te amo </h1>
-</body>
-</html>
+<section>
+    <nav>
+        <img src="link"/>
+        <ul>
+            <li>
+                <a href="link">Projects</a>
+            </li>
+            <li>
+                <a href="link">About</a>
+            </li>
+            <li>
+                <a href="link">Courses</a>
+            </li>
+        </ul> 
+    </nav>    
+    <header>
+        <div>
+            <hi>Hello World</hi>
+            <p>The world of coding is full of posibilities</p>
+            <button>Start Here</button>
+        </div>
+        <figure>
+            <img src="link">
+        </figure>
+    </header>
+</section>
